--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta property="og:title" content="DKWIN – Bangladesh's #1 Online Casino & Betting Platform" />
   <meta property="og:description" content="Join thousands of players on DKWIN. Slots, live casino, cricket betting & more. Fast payouts. Secure. 24/7 support." />
   <meta property="og:type" content="website" />
+  <meta name="google-site-verification" content="aLP9RYBjXXJ-x_TzJT7RpLGbrSzdsgkDoRJNr1_Al98" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@300;400;500;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet" />
 
