--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DKWIN – #1 Online Casino & Betting Platform in Bangladesh | Join Now</title>
-  <meta name="description" content="DKWIN is Bangladesh's most trusted online casino and betting platform. Play slots, live casino, and sports betting. Instant withdrawals, 24/7 support & generous welcome bonus. Register in under 60 seconds." />
+  <meta name="description" content="DKWIN is Bangladesh's most trusted online casino and betting platform. Play slots, live casino, and sports betting. Register in under 60 seconds." />
   <meta name="keywords" content="DKWIN, DKWIN Bangladesh, DKWIN casino, DKWIN betting, DKWIN login, DKWIN app, DKWIN bonus, online casino Bangladesh, sports betting Bangladesh" />
   <meta name="robots" content="index, follow" />
   <meta property="og:title" content="DKWIN – Bangladesh's #1 Online Casino & Betting Platform" />
