--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
     <p>© 2026 DKWIN. All rights reserved.</p>
     <p style="color: var(--muted); font-size: 0.8rem;">Payments: bKash · Nagad · Rocket · Bank Transfer</p>
   </div>
-  <p class="responsible">
+  <p class="Responsibility">
     ⚠️ <strong>Responsible Gaming Notice:</strong> DKWIN is intended for adults aged 18 and above. Gambling involves financial risk. Please play responsibly and within your means. If you feel you may have a gambling problem, please use our self-exclusion tools or contact a support service in your region.
   </p>
 </footer>
