--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
   <div class="footer-grid">
     <div class="footer-brand">
       <div class="logo">DKWIN</div>
-      <p>Bangladesh's most trusted online casino and sports betting platform. Secure, fair, and built for real players.</p>
+      <p>Bangladesh's most trusted online casino and sports betting platform. Secure, fair, and built for real players.</p></div>
     </div>
     <div class="footer-col">
       <h3>Games</h3>
@@ -703,9 +703,9 @@
     <p>© 2026 DKWIN. All rights reserved.</p>
     <p style="color: var(--muted); font-size: 0.8rem;">Payments: bKash · Nagad · Rocket · Bank Transfer</p>
   </div>
-  <p class="Responsibility">
-    ⚠️ <strong>Responsible Gaming Notice:</strong> DKWIN is intended for adults aged 18 and above. Gambling involves financial risk. Please play responsibly and within your means. If you feel you may have a gambling problem, please use our self-exclusion tools or contact a support service in your region.
-  </p>
+        <div class="Responsibility">
+    <p ⚠️ <strong>Responsible Gaming Notice:</strong> DKWIN is intended for adults aged 18 and above. Gambling involves financial risk. Please play responsibly and within your means. If you feel you may have a gambling problem, please use our self-exclusion tools or contact a support service in your region.
+  </p> </div>
 </footer>
 
 <script>
